@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2021,v 1.4391 2021/08/28 06:28:12 taca Exp $
+$NetBSD: CHANGES-2021,v 1.4392 2021/08/28 07:23:03 mef Exp $
 
 Changes to the packages collection and infrastructure in 2021:
 
@@ -6924,8 +6924,18 @@ Changes to the packages collection and infrastructure in 2021:
 	Updated cross/mingw-w64-x86_64-headers to 9.0.0 [ryoon 2021-08-27]
 	Updated cross/mingw-w64-x86_64-winpthreads to 9.0.0 [ryoon 2021-08-27]
 	Updated news/tin to 2.6.0 [micha 2021-08-27]
+	Added math/R-hexbin version 1.28.2 [mef 2021-08-28]
+	Added devel/R-R.methodsS3 version 1.8.1 [mef 2021-08-28]
+	Added devel/R-R.utils version 2.10.1 [mef 2021-08-28]
+	Updated graphics/R-latex2exp to 0.5.0 [mef 2021-08-28]
 	Updated mail/fetchmail to 6.4.21 [triaxx 2021-08-28]
 	Updated mail/fetchmailconf to 6.4.21 [triaxx 2021-08-28]
+	Updated math/R-compositions to 2.0.2 [mef 2021-08-28]
+	Added devel/R-R.oo version 1.24.0 [mef 2021-08-28]
 	Updated lang/php74 to 7.4.23 [taca 2021-08-28]
 	Updated lang/php80 to 8.0.10 [taca 2021-08-28]
+	Added math/R-sets version 1.0.18 [mef 2021-08-28]
 	Updated lang/php73 to 7.3.30 [taca 2021-08-28]
+	Added math/R-stat.extend version 0.1.4 [mef 2021-08-28]
+	Updated graphics/R-ggplot2 to 3.3.5 [mef 2021-08-28]
+	Updated graphics/R-ggtern to 3.3.5 [mef 2021-08-28]
